--- a/portfolio.html
+++ b/portfolio.html
@@ -32,42 +32,52 @@
     </nav>
 
     <main class="container">
-        
-        <p> Projects coming soon!</p>
 
         <section class="row">
 
             <section class="col-md-6">
-                <img src="https://via.placeholder.com/350" class="img-fluid" alt="Responsive image">
+                <a href="https://kcrammer.github.io/codeRefactor/">
+                <img src="assets/images/codeRefactor_screenshot.png" class="img-fluid" alt="screenshot of the deployed application" width="350" height="350">
+                Code Refactor</a>
             </section>
 
             <section class="col-md-6">
-                <img src="https://via.placeholder.com/350" class="img-fluid" alt="Responsive image">
-            </section>
+              <a href="https://kcrammer.github.io/passwordGenerator/">
+              <img src="assets/images/passwordGenerator_screenshot.png" class="img-fluid" alt="screenshot of the deployed application" width="350" height="350">
+              Password Generator</a>
+          </section>
 
         </section>
 
         <section class="row">
 
-            <section class="col-md-6">
-                <img src="https://via.placeholder.com/350" class="img-fluid" alt="Responsive image">
-            </section>
+          <section class="col-md-6">
+            <a href="https://kcrammer.github.io/codeQuiz/">
+            <img src="assets/images/codeQuiz_screenshot.png" class="img-fluid" alt="screenshot of the deployed application" width="350" height="350">
+            Code Quiz</a>
+          </section>
 
-            <section class="col-md-6">
-                <img src="https://via.placeholder.com/350" class="img-fluid" alt="Responsive image">
-            </section>
+          <section class="col-md-6">
+            <a href="https://kcrammer.github.io/workDayScheduler/">
+            <img src="assets/images/workDayScheduler_screenshot.png" class="img-fluid" alt="screenshot of the deployed application" width="350" height="350">
+            Work Day Scheduler</a>
+          </section>
 
         </section>
 
         <section class="row">
 
-            <section class="col-md-6">
-                <img src="https://via.placeholder.com/350" class="img-fluid" alt="Responsive image">
-            </section>
+          <section class="col-md-6">
+            <a href="https://kcrammer.github.io/WeatherDashboard/">
+            <img src="assets/images/WeatherDashboard_screenshot.png" class="img-fluid" alt="screenshot of the deployed application" width="350" height="350">
+            Weather Dashboard</a>
+          </section>
 
-            <section class="col-md-6">
-                <img src="https://via.placeholder.com/350" class="img-fluid" alt="Responsive image">
-            </section>
+          <section class="col-md-6">
+            <a href="https://kcrammer.github.io/laughs-and-eats/">
+            <img src="assets/images/laughs-and-eats_screenshot.png" class="img-fluid" alt="screenshot of the deployed application" width="350" height="350">
+            Laughs & Eats</a>
+          </section>
 
         </section>
     </main>
