--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
 
         <section class="col-md-4">
 
-            <img src="assets/Profilepic.jpeg" class="img-fluid" alt="Kaitlin Crammer">
+            <img src="assets/images/Profilepic.jpeg" class="img-fluid" alt="Kaitlin Crammer">
         </section>
 
         <section class="col-md-8">
